Доработал почти все по ТЗ